[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cargo-compliance-env"
version = "0.1.0"
description = "Bilateral Cargo Compliance & Regulatory RL Environment"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joel Jose" }]
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "openai",
    "httpx",
    "requests",
    "groq",
    "python-dotenv",
    "tenacity",
    "pydantic"
]

[project.scripts]
# Entry point to launch the FastAPI environment server
cargo-env = "server.environment:main"
# Entry point to launch the agent runner
cargo-agent = "i:main"

[tool.setuptools]
# Ensures both the server logic and your agent script are discoverable
packages = ["server"]
py-modules = ["i"]

[tool.setuptools.package-data]
# Includes the final_dataset.json and openenv.yaml in the distribution
"*" = ["*.json", "*.yaml"]