[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cargo-compliance-env"
version = "0.1.0"
description = "Bilateral Cargo Compliance RL Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi",
    "uvicorn",
    "openai",
    "httpx",
    "requests",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "cargo_compliance_env.server.environment:main"

[tool.setuptools]
include-package-data = true
packages = ["cargo_compliance_env", "cargo_compliance_env.server"]
package-dir = { "cargo_compliance_env" = ".", "cargo_compliance_env.server" = "server" }

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml"]
